--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <!-- head definitions go here -->
+       <h1> changes from other developer</h1>
     </head>
     <body>
     </body>
